# well_thats_just_prime_lab

./: CMakeLists.txt  main.cpp
src/: my_logic.cpp  my_logic.hpp  prime.cpp  prime.hpp
tests/: my_logic_test.cpp  prime_test.cpp
